--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,9 @@
 {
   "require": {
     "yiisoft/yii": "1.1.*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "3.7.*",
+    "phpunit/phpunit-selenium": ">=1.2"
   }
 }
