--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="name-of-project" default="build">
   <target name="phpunit" description="Run unit tests with PHPUnit">
-    <exec executable="./vendor/bin/phpunit" failonerror="true"/>
+    <exec executable="./vendor/bin/phpunit" failonerror="true">
+      <arg value="-c" />
+      <arg path="protected/tests/phpunit.xml" />
+    </exec>
    </target>
 </project>
